Updating Landing Page Logic * Seperating types to ppc and qr pages. * creating forms, public pages for each type. * updating database to add type. * Integrate template from database to public page. * Update routing for new types.

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -200,11 +200,16 @@ fgms_shopify_landing_page_index:
     methods: [POST,GET]       
 
 #landing pages
-fgms_shopify_landing_page_edit:
-    path: /lp/{id}/
-    defaults: { _controller: FgmsShopifyBundle:ShopifyLandingPage:edit}
+fgms_shopify_landing_page_ppc_edit:
+    path: /lp/ppc/{id}/
+    defaults: { _controller: FgmsShopifyBundle:ShopifyLandingPage:editPPC}
     methods: [POST,GET]
-
+    
+#landing pages
+fgms_shopify_landing_page_qr_edit:
+    path: /lp/qr/{id}/
+    defaults: { _controller: FgmsShopifyBundle:ShopifyLandingPage:editQR}
+    methods: [POST,GET]
 
   
     
