Add Warranty Registration to Shopify App.
Updated ShopifyProxyController.php
* combined rma and warranty logic to share most of the code.
* add warranty, and warrantyitem into form types.
* created a 404 error if no form was selected.

Created Customers Entity
* This replaces the rma entity, to combine this and warranty contact
information
* Added extra fields to customers entity
   - terms
   - purchaseDate
   - purchaseLocation
   - purchaseReceipt

Updated ShopifyFormsController
* this was to streamline some of the code, and create code to display
rma, and product warranties.

Created product-index.html.twig template to remplace rma-index-html.twig
template to combine rma, and warranty type indexes in admin section.

Added WarrantyItem Entity, similar as rmaItem, added quantity.

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -37,10 +37,14 @@ fgms_shopify_forms_rma:
     path: /forms/rma/
     defaults: { _controller: FgmsShopifyBundle:ShopifyForms:rmaIndex }
 
+
 fgms_shopify_forms_rma:
    path: /forms/rma/{rmaNumber}/
    defaults: { _controller: FgmsShopifyBundle:ShopifyForms:rmaDetail }
 
+fgms_shopify_forms_warranty:
+    path: /forms/warranty/
+    defaults: { _controller: FgmsShopifyBundle:ShopifyForms:warrantyIndex }
 
 #Product options Routs
 fgms_shopify_options:
@@ -237,7 +241,7 @@ fgms_shopify_specials_index:
     defaults: { _controller: FgmsShopifyBundle:ShopifySpecials:index}
     methods: [POST,GET]
 
-#landing pages
+#specials edit pages
 fgms_shopify_specials_edit:
     path: /specials/{id}/
     defaults: { _controller: FgmsShopifyBundle:ShopifySpecials:edit}
